some changes added

--- a/src/components/content/products/addProduct.css
+++ b/src/components/content/products/addProduct.css
@@ -1,7 +1,7 @@
 #addbox{
 	width: 370px;
 	height: 550px;
-	background-color: #f1f1f1;
+	background-color: #effafa;
 	margin-top: 40px;
 	margin-left: 36%;
 	padding: 20px;
