--- a/src/components/content/products/productDetail.css
+++ b/src/components/content/products/productDetail.css
@@ -1,16 +1,17 @@
 #editpro{
-    width: 80px;
-    height: 40px;
-    border-radius: 10px;
+    width: 60px;
+    height: 30px;
+    border-radius: 5px;
     border: none;
-    background-color: #4CAF50;
+    background-color: #1c8adb;
     color: white;
 }
 #deletepro{
-    width: 80px;
-    height: 40px;
-    border-radius: 10px;
+    /* margin-left: 40px; */
+    width: 60px;
+    height: 30px;
+    border-radius: 5px;
     border: none;
-    background-color:#f44336;
+    background-color:#1c8adb;
     color: white;
 }
