--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,11 +1,11 @@
 #nav {
     width: 100%;
     height: 60px;
-    margin-top: 10px;
-    background-color:#f1f1;
+    
+    background-color:rgba(245, 236, 245, 0.067);
 }
 
-#welcome{
+/* #welcome{
     font-size: 20px;
     font-weight: bold;
     color:darkblue;
@@ -27,4 +27,10 @@
     margin: 10px;
     margin-top: -30px;
 }
+ */
 
+ /* #ul li{
+     padding-left: 100px;
+     margin-left: 500px;
+    
+ } */
