--- a/src/components/content/products/editProduct.css
+++ b/src/components/content/products/editProduct.css
@@ -1,10 +1,11 @@
 #editbox{
 	width: 370px;
-	height: 520px;
-	background-color: #f1f1f1;
+	height: max-content;
+	background-color: #effafa;
 	margin-top: 40px;
 	margin-left: 36%;
 	padding: 20px;
+	
 }
 #editbox p{
 	font-size: 15px;
@@ -12,7 +13,7 @@
 #editbox input{
 	width: 100%;
 }
-#editbox input[type="text"],input[type="number"]{
+#editbox input[type="text"],input[type="number"],input[type="float"]{
 	border:none;
     border-bottom: 1px solid #1c8adb;
 	background: transparent;
