--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,9 +1,9 @@
-#nav {
+/* #nav {
     width: 100%;
     height: 60px;
     
     background-color:rgba(245, 236, 245, 0.067);
-}
+} */
 
 /* #welcome{
     font-size: 20px;
@@ -34,3 +34,48 @@
      margin-left: 500px;
     
  } */
+
+
+ body{
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    
+}
+
+nav{
+    background-color: darkblue;
+    font-size: 2rem;
+    width: 100%;
+}
+
+nav ul{
+    list-style-type: none;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    margin:0;
+    padding:0
+}
+nav ul li{
+    background-color: darkblue;
+    padding: 1rem;
+    cursor: pointer;
+}
+
+nav ul li :link:hover{
+    font-weight: bold;
+    font-style: italic;
+   
+    
+}
+
+@media screen and (max-width: 600px)  {
+    nav ul li {
+      margin: auto;
+      float: none;
+      width: 100%;
+    }
+  }
+
+  
